# ContentCreaJudge

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  Makefile  coverage-debug.json  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
.pre-commit-cache/: db.db
.streamlit/: config.toml
API_CONTRACT/: index.html
ARCHITECTURE/: index.html
CADRAGE_EQUIPE/: index.html
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
DEVELOPER_GUIDE/: index.html
ERROR_HANDLING/: index.html
RULES_CONFIGURATION/: index.html
SECURITY/: index.html
contracts/: README.md
contracts/v1/: README.md
docs/: API_CONTRACT.md  ARCHITECTURE.md  CADRAGE_EQUIPE.md  DEVELOPER_GUIDE.md  ERROR_HANDLING.md  README.md  RULES_CONFIGURATION.md
search/: search_index.json
src/contentcreajudge/: __main__.py
src/contentcreajudge/adapters/llm/: client.py  mistral_client.py
src/contentcreajudge/adapters/sources/: exceptions.py  source_url_validator.py
src/contentcreajudge/aggregation/: brief_aggregator.py  cta_aggregator.py  editorial_style_aggregator.py  evergreen_aggregator.py  funnel_aggregator.py  length_aggregator.py  persona_aggregator.py  seo_aggregator.py  sources_aggregator.py  structure_aggregator.py  tone_aggregator.py  typography_aggregator.py
src/contentcreajudge/api/: app.py  error_handlers.py  evaluations.py  health.py  root.py
src/contentcreajudge/api/judges/: brief.py  cta.py  evergreen.py  (+9 more)
src/contentcreajudge/core/: __init__.py  error_models.py  errors.py  settings.py
src/contentcreajudge/preprocessing/: brief_preprocessor.py  cta_preprocessor.py  editorial_style_preprocessor.py  evergreen_preprocessor.py  funnel_preprocessor.py  length_preprocessor.py  persona_preprocessor.py  seo_preprocessor.py  sources_preprocessor.py  structure_preprocessor.py  tone_preprocessor.py  typography_preprocessor.py
src/contentcreajudge/ui/: app.py
tests/: api_test.py  ui_api_client_test.py
tests/judges/brief/: brief_api_test.py  brief_flow_test.py  brief_judge_test.py  brief_preprocessor_test.py  brief_prompt_test.py  brief_resolver_test.py
tests/judges/cta/: cta_api_test.py  cta_flow_test.py  cta_judge_test.py  cta_preprocessor_test.py  cta_resolver_test.py  cta_semantic_test.py
tests/judges/editorial_style/: editorial_style_aggregator_test.py  editorial_style_api_test.py  editorial_style_flow_test.py  editorial_style_judge_test.py  editorial_style_preprocessor_test.py  editorial_style_prompt_test.py  editorial_style_resolver_test.py
tests/judges/evergreen/: evergreen_aggregator_test.py  evergreen_api_test.py  evergreen_flow_test.py  evergreen_judge_test.py  evergreen_preprocessor_test.py  evergreen_resolver_test.py
tests/judges/funnel/: funnel_aggregator_test.py  funnel_api_test.py  funnel_flow_test.py  funnel_judge_test.py  funnel_preprocessor_test.py  funnel_prompt_test.py  funnel_resolver_test.py
tests/judges/length/: length_api_test.py  length_flow_test.py  length_judge_test.py  length_preprocessor_test.py  length_resolver_test.py
tests/judges/persona/: persona_api_test.py  persona_flow_test.py  persona_judge_test.py  persona_preprocessor_test.py  persona_prompt_test.py  persona_resolver_test.py
tests/judges/seo/: seo_api_test.py  seo_flow_test.py  seo_judge_test.py  seo_preprocessor_test.py  seo_resolver_test.py
tests/judges/sources/: source_url_validator_test.py  sources_api_test.py  sources_flow_test.py  sources_judge_test.py  sources_preprocessor_test.py  sources_resolver_test.py
tests/judges/structure/: structure_api_test.py  structure_flow_test.py  structure_judge_test.py  structure_preprocessor_test.py  structure_resolver_test.py
tests/judges/tone/: tone_aggregator_test.py  tone_api_test.py  tone_flow_test.py  tone_judge_test.py  tone_preprocessor_test.py  tone_prompt_test.py  tone_resolver_test.py
tests/judges/typography/: typography_api_test.py  typography_flow_test.py  typography_judge_test.py  typography_preprocessor_test.py  typography_resolver_test.py
tests/orchestration/: company_context_resolver_test.py  global_evaluation_test.py  global_preprocessor_test.py  judge_registry_test.py  orchestrator_test.py
(+101 files in other folders)
