[project]
name = "contentcreajudge"
version = "0.1.0"
description = "AI-assisted engine for evaluating and improving editorial content quality and compliance."
authors = [
  { name = "Ichrak", email = "ichraknaceurr@gmail.com" }
]
readme = "docs/README.md"
requires-python = ">= 3.14"

dependencies = [
    "httpx>=0.28.1,<0.28.2",
    "beautifulsoup4>=4.14.3,<4.15.0",
    "fastapi>=0.133.0,<0.134.0",
    "keybert>=0.9.0,<1.0.0",
    "nltk>=3.9.2,<4.0.0",
    "pillow>=12.1.1,<13.0.0",
    "requests>=2.33.1,<2.34.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "spacy>=3.8.7,<4.0.0",
    "starlette>=1.3.1,<2.0.0",
    "streamlit>=1.54.0,<1.55.0",
    "urllib3>=2.7.0,<2.8.0",
    "uvicorn>=0.37.0,<0.38.0",
    "openai>=2.38.0,<2.39.0",
    "python-dotenv>=1.2.2,<1.3.0",
]

[tool.uv]
add-bounds = "minor"
package = true
constraint-dependencies = [
    "gitpython>=3.1.49",
]

[dependency-groups]
dev = [
    "diff-cover>=10.2.0,<10.3.0",
    "griffe-inherited-docstrings>=1.1.3,<1.2.0",
    "httpx>=0.28.1,<0.29.0",
    "mkdocs>=1.6.1,<1.7.0",
    "mkdocs-material>=9.7.6,<9.8.0",
    "mkdocstrings-python>=2.0.3,<2.1.0",
    "pre-commit>=4.5.1,<4.6.0",
    "pytest>=9.0.3,<9.1.0",
    "pytest-asyncio>=1.3.0,<1.4.0",
    "pytest-cov>=7.1.0,<7.2.0",
    "pytest-mock>=3.15.1,<3.16.0",
    "ruff>=0.15.8,<0.15.9",
    "ty>=0.0.26,<0.0.27",
]

[tool.ruff]
output-format = "concise"
target-version = "py314"
line-length = 88
indent-width = 4
extend-exclude = [
  ".pre-commit-cache",
  ".uv-cache",
]
exclude = [
  ".git",
  ".pytest_cache",
  ".ruff_cache",
  ".uv-cache",
  ".venv",
  "htmlcov",
]

lint.pydocstyle.convention = "google"
lint.flake8-bandit.check-typed-exception = true
lint.flake8-type-checking.strict = true

lint.select = ["ALL"]
lint.ignore = [
  "COM812", # Conflicts with `ruff format`
  "PLE1205", # logging-too-many-args
  "D100", # pydocstyle
  "EM", # flake8-errmsg
  "INP001", # implicit-namespace-package
  "COM812", # may conflict with ruff format
  "TRY003", # raise-vanilla-args
  "TRY401", # verbose-log-message
]
lint.extend-unfixable = [
  "TC002", # typing-only-third-party-import
  "TRY400", # error-instead-of-exception
  "SIM105", # suppressible-exception
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = [
    "S101", # Asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "D103", # Test names are descriptive enough.
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "RUF001", # Test fixtures may contain copied editorial text.
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
    "ANN", # Tests use lightweight fakes and fixtures.
    "COM812", # Tests favor compact literals in many assertions.
    "D103", # Test names document behavior.
    "E501", # Long fixtures and expected strings are acceptable in tests.
    "I001", # Existing test import blocks are kept stable.
    "PT017", # Existing tests assert exception messages explicitly.
    "SLF001", # Tests may access private helpers for focused coverage.
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = ["--cov=src", "--cov-report=term", "--cov-report=xml"]

[tool.coverage.report]
exclude_also = [
  "@(abc\\.)?abstractmethod",
]

[tool.uv-secure.vulnerability_criteria]
# TEMPORARY: unblock development. Heavy ML deps (torch, transformers, nltk)
# constantly surface OSV advisories, many without a stable fix. Don't block
# commits on what we cannot fix yet; we still get alerted on any newly fixable
# advisory. To revisit: bump the ML stack (sentence-transformers/transformers/
# torch) in a dedicated PR with SEO judge tests. Review by: 2026-09-30.
show_severity = true
severity = "medium"
ignore_unfixed = true
ignore_vulnerabilities = [
  "GHSA-29pf-2h5f-8g72",  # transformers -> fix 5.3.0 (major, blocked by sentence-transformers<4)
  "GHSA-69w3-r845-3855",  # transformers -> fix only in 5.0.0rc3 (pre-release)
]
